--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 	box-sizing: border-box;
 	font-family: 'Arial', sans-serif;
 	font-variation-settings: "wght" 500, "SRFF" 0;
+	cursor: none;
 }
 :root {
 	--width: 200vw;
@@ -19,7 +20,6 @@ body {
 	height: 100dvh;
 	position: relative;
 	overflow: hidden;
-	cursor: crosshair;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -38,6 +38,52 @@ body {
 	bottom: 10px;
 	border: 1px solid var(--color);
 }
+.crosshair-x {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translate(-50%, -50%);
+	width: 200vw;
+	height: 1px;
+	background-color: var(--color);
+	z-index: 999;
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity .2s, transform .5s, width .5s ease-in-out, background-color .5s;
+}
+.crosshair-x[data-focus="1"] {
+	transform: translate(-50%, -50%) rotate(45deg);
+	width: 25px;
+}
+.crosshair-y {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translate(-50%, -50%);
+	background-color: var(--color);
+	height: 200vmax;
+	width: 1px;
+	z-index: 999;
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity .2s, transform .5s, height .5s ease-in-out, background-color .5s;
+}
+.crosshair-y[data-focus="1"] {
+	transform: translate(-50%, -50%) rotate(45deg);
+	height: 25px;
+}
+.cursor {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 999;
+	pointer-events: none;
+	opacity: 0;
+	width: 10vw;
+	filter: drop-shadow(5px 5px 10px rgba(0,0,0,.5));
+}
 .content {
 	position: absolute;
 	left: calc(50% - calc(var(--width) / 2));
@@ -47,7 +93,7 @@ body {
 }
 .link {
 	position: absolute;
-	transform: translate(-50%, -50%) scale(0);
+	transform: translate(-50%, -50%) scale(0) rotate(0);
 	text-decoration: none;
 	font-size: 12px;
 	top: 50%;
